# bot_telegram_wikipedia

./: .gitignore  Cargo.toml  README.md  deny.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml
infra/: main.tf  outputs.tf  variables.tf
scripts/: build-lambda.sh  favorite-category.sh  set-webhook.sh  show-logs.sh
src/: main.rs
tests/fixtures/wikipedia/: armies_of_exigo.html  flag_of_adjara.html  mill_farm_inn.html  porta_batumi_tower.html  vostok_1_ru.html
