[package]
name = "telegram-wikipedia-bot"
version = "0.0.12"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
ego-tree = "0.10"
html-escape = "0.2"
lambda_http = "1.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
